Adding pagination to client search.